test_suite/tests/ui/conflict/flatten-newtype-struct.stderr
error: #[serde(flatten)] cannot be used on newtype structs
  --> $DIR/flatten-newtype-struct.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

